--- a/rails/policy_management/app/views/layouts/application.html.slim
+++ b/rails/policy_management/app/views/layouts/application.html.slim
@@ -6,5 +6,6 @@ html
     = csp_meta_tag
     = stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload'
     = javascript_include_tag 'application', 'data-turbolinks-track': 'reload'
+    link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:300,400,500,600,700" 
   body
     == yield
