--- a/rails/policy_management/app/views/campaigns/new.html.slim
+++ b/rails/policy_management/app/views/campaigns/new.html.slim
@@ -44,12 +44,12 @@ div class="container-fluid "
             ul class="nav nav-pills justify-content-center" role="tablist"
               li class="nav-item"
                 div class="wizard_line"
-                = link_to '1' ,"#new", class: "nav-link active"
+                = link_to '1' ,"#new", class: "nav-link active", 'data-toggle': "pill"
               li class="nav-item"
                 div class="wizard_line"
-                = link_to '2' ,"#access", class: "nav-link nav-2"
+                = link_to '2' ,"#access", class: "nav-link nav-2", 'data-toggle': "pill"
               li class="nav-item"
-                = link_to '3' ,"#tags", class: "nav-link nav-2"
+                = link_to '3' ,"#tags", class: "nav-link nav-2", 'data-toggle': "pill"
             div class="tab-content mt-3"
               div id="new" class="container tab-pane active"
                 br
@@ -83,9 +83,9 @@ div class="container-fluid "
                     label class="custom-control-label pl-1" for="collab"
                       strong class="d-block mb-2"Collaborators only
                       This campaign will not be displayed to others you will need to invite specific people in order to collaborate with them.
-                  div class="text-right"
-                    a class="btnPrevious btn" Previous
-                    a class="btnNext btn" Next
+                div class="text-right"
+                  a class="btnPrevious btn" Previous
+                  a class="btnNext btn" Next
 
 
               div id="tags" class="container tab-pane fade"
