--- a/rails/policy_management/app/views/layouts/application.html.slim
+++ b/rails/policy_management/app/views/layouts/application.html.slim
@@ -4,8 +4,7 @@ html
     title PolicyManagement
     = csrf_meta_tags
     = csp_meta_tag
-    = stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload'
+    = stylesheet_link_tag 'application',"https://fonts.googleapis.com/css?family=Montserrat:300,400,500,600,700", media: 'all', 'data-turbolinks-track': 'reload'
     = javascript_include_tag 'application', 'data-turbolinks-track': 'reload'
-    link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:300,400,500,600,700" 
   body
     == yield
